# Jiuge

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: PRD-v1.md  architecture-v1.md  design.md  open-source-frameworks.md  v2.0-beta-roadmap.md  v2.0-roadmap.md
skill/: SKILL.md  skill.json
src/: __init__.py  music_player.py  netease_api.py
src/jiuge/: __init__.py  agent.py  api.py  cli.py  local_library.py  recommend.py  service.py  sync.py
src/jiuge/adapters/: __init__.py  apple.py  base.py  netease.py  qqmusic.py  spotify.py
src/jiuge/memory/: __init__.py  store.py
src/jiuge/player/: __init__.py  local.py
tests/: __init__.py  test_adapters.py  test_api.py  test_local_library.py  test_recommend.py  test_sync.py
web/: index.html  package.json  tailwind.config.js  vite.config.js
web/src/: App.vue  main.js
web/src/api/: index.js
web/src/assets/: main.css
web/src/components/: Player.vue  SearchBar.vue  Sidebar.vue  UserMenu.vue
web/src/router/: index.js
web/src/stores/: index.js  player.js
web/src/views/: HomeView.vue  LibraryView.vue  PlaylistDetailView.vue  PlaylistsView.vue  RecommendView.vue  SearchView.vue  SettingsView.vue  SyncView.vue
